--- a/package.json
+++ b/package.json
@@ -3,27 +3,64 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "npx eslint --no-error-on-unmatched-pattern api/; npx eslint --no-error-on-unmatched-pattern app/; npx eslint --no-error-on-unmatched-pattern components/; npx eslint --no-error-on-unmatched-pattern context/; npx eslint --no-error-on-unmatched-pattern utils/",
+    "lint:fix": "npx eslint --no-error-on-unmatched-pattern api/ --fix && npx eslint --no-error-on-unmatched-pattern app/ --fix && npx eslint --no-error-on-unmatched-pattern components/ && npx eslint --no-error-on-unmatched-pattern context/ && --fix && npx eslint --no-error-on-unmatched-pattern utils/ --fix",
+    "prettier": "npx prettier --no-error-on-unmatched-pattern --check api/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check app/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check components/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check context/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check utils/**/*.{js,jsx,ts,tsx,json}",
+    "prettier:write": "npx prettier --no-error-on-unmatched-pattern --write api/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write app/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write components/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write context/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write utils/**/*.{js,jsx,ts,tsx,json}",
+    "cs": "npm run lint; npm run prettier",
+    "cs:fix": "npm run lint:fix && npm run prettier:write"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.21.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@hookform/resolvers": "^3.0.0",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-navigation/drawer": "^6.6.2",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
+    "expo-haptics": "~12.2.1",
+    "expo-image": "~1.0.0",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "i18next": "^22.4.14",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-hook-form": "^7.43.7",
+    "react-native": "0.71.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-modal-datetime-picker": "^15.0.0",
+    "react-native-paper": "^5.5.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-query": "^3.39.3",
+    "tailwindcss": "3.3",
+    "typescript": "^4.9.4",
+    "zod": "^3.21.4",
+    "zod-i18n-map": "^2.9.1",
+    "expo-localization": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.4",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.5"
   },
   "resolutions": {
     "metro": "^0.73.7",
