fix pre splash screen

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "version": "0.0.1",
     "icon": "assets/images/icon.png",
     "splash": {
-      "image": "assets/images/splash_background.jpg",
+      "image": "assets/images/splash_background.png",
       "resizeMode": "cover",
       "backgroundColor": "#16A34A"
     },
