--- a/app.json
+++ b/app.json
@@ -18,8 +18,8 @@
     "version": "0.0.1",
     "icon": "assets/images/icon.png",
     "splash": {
-      "image": "assets/images/splash_background.png",
-      "resizeMode": "cover",
+      "image": "assets/images/splash.png",
+      "resizeMode": "contain",
       "backgroundColor": "#16A34A"
     },
     "orientation": "portrait",
