--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "expo": {
     "android": {
-      "package": "org.managementtechniksysteme.quokkamobile"
+      "package": "org.managementtechniksysteme.quokkamobile",
+      "adaptiveIcon": {
+        "foregroundImage": "assets/images/adaptive-icon.png",
+        "backgroundColor": "#16A34A"
+      }
     },
     "ios": {
       "config": {
@@ -27,9 +31,16 @@
     "assetBundlePatterns": [
       "assets/images/*"
     ],
+    "plugins": [
+      [
+        "expo-updates",
+        {
+          "username": "manuelsteiner"
+        }
+      ]
+    ],
     "extra": {
       "eas": {
-        "projectId": "fe29bab9-1536-412f-ac37-049a10a465f4"
       },
       "versionCommitHash": "156b2c5"
     }
