--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "typescript": "^4.9.4",
     "zod": "^3.21.4",
     "zod-i18n-map": "^2.9.1",
-    "expo-localization": "~14.1.1"
+    "expo-localization": "~14.1.1",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
