--- a/eas.json
+++ b/eas.json
@@ -1,22 +1,32 @@
 {
   "build": {
-    "preview": {
-      "channel": "production"
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "channel": "development"
     },
-    "apk-preview": {
+    "beta": {
+      "channel": "beta"
+    },
+    "apk-beta": {
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       },
-      "channel": "apk-preview"
+      "channel": "beta"
     },
     "production": {
       "channel": "production"
     },
     "apk-production": {
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       },
-      "channel": "apk-production"
+      "channel": "production"
     }
   }
 }
