--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "zod": "^3.21.4",
     "zod-i18n-map": "^2.9.1",
     "expo-localization": "~14.1.1",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
