--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "web": "expo start --web",
     "lint": "npx eslint --no-error-on-unmatched-pattern api/; npx eslint --no-error-on-unmatched-pattern app/; npx eslint --no-error-on-unmatched-pattern components/; npx eslint --no-error-on-unmatched-pattern context/; npx eslint --no-error-on-unmatched-pattern utils/",
     "lint:fix": "npx eslint --no-error-on-unmatched-pattern api/ --fix && npx eslint --no-error-on-unmatched-pattern app/ --fix && npx eslint --no-error-on-unmatched-pattern components/ && npx eslint --no-error-on-unmatched-pattern context/ && --fix && npx eslint --no-error-on-unmatched-pattern utils/ --fix",
-    "prettier": "npx prettier --no-error-on-unmatched-pattern --check api/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check app/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check components/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check context/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check utils/**/*.{js,jsx,ts,tsx,json}",
+    "prettier:check": "npx prettier --no-error-on-unmatched-pattern --check api/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check app/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check components/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check context/**/*.{js,jsx,ts,tsx,json}; npx prettier --no-error-on-unmatched-pattern --check utils/**/*.{js,jsx,ts,tsx,json}",
     "prettier:write": "npx prettier --no-error-on-unmatched-pattern --write api/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write app/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write components/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write context/**/*.{js,jsx,ts,tsx,json} && npx prettier --no-error-on-unmatched-pattern --write utils/**/*.{js,jsx,ts,tsx,json}",
     "cs": "npm run lint; npm run prettier",
     "cs:fix": "npm run lint:fix && npm run prettier:write"
@@ -20,14 +20,17 @@
     "@react-navigation/drawer": "^6.6.2",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-device": "~5.2.1",
     "expo-haptics": "~12.2.1",
     "expo-image": "~1.0.0",
     "expo-linking": "~4.0.1",
+    "expo-localization": "~14.1.1",
     "expo-router": "^1.2.0",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.16.4",
     "i18next": "^22.4.14",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -45,10 +48,7 @@
     "tailwindcss": "3.3",
     "typescript": "^4.9.4",
     "zod": "^3.21.4",
-    "zod-i18n-map": "^2.9.1",
-    "expo-localization": "~14.1.1",
-    "expo-updates": "~0.16.4",
-    "expo-dev-client": "~2.2.1"
+    "zod-i18n-map": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
