--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,8 @@
     "apk-beta": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "image": "latest"
       },
       "channel": "beta"
     },
@@ -24,7 +25,8 @@
     "apk-production": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "image": "latest"
       },
       "channel": "production"
     }
