--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "android": {
       "package": "org.managementtechniksysteme.quokkamobile",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#16A34A"
