--- a/app.json
+++ b/app.json
@@ -36,6 +36,13 @@
     ],
     "plugins": [
       [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#16A34A"
+        }
+      ],
+      [
         "expo-updates",
         {
           "username": "managementtechniksysteme"
