--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwindcss": "3.3",
     "typescript": "^4.9.4",
     "zod": "^3.21.4",
-    "zod-i18n-map": "^2.9.1"
+    "zod-i18n-map": "^2.9.1",
+    "expo-notifications": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
